// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortingIcons matches the snapshot with the correct direction 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="upward-icon"
    focusable="false"
    style="font-size: 18px;"
    viewBox="0 0 24 24"
  >
    <path
      d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
    />
  </svg>
</DocumentFragment>
`;

exports[`SortingIcons matches the snapshot with the correct direction 2`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="downward-icon"
    focusable="false"
    style="font-size: 18px;"
    viewBox="0 0 24 24"
  >
    <path
      d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
    />
  </svg>
</DocumentFragment>
`;
